fixed the issues for mobile: - align-content: center without a flexbox was used, but not supported on ios - -webkit-text-size-adjust: 100% was required for text to render with the correct sizing - maximum-scale=1.0 was required for mobile browser to not zoom automatically when changing screen orientation

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,6 +8,8 @@ body {
     height: 100%;
     overflow-y: scroll;
     overflow-x: hidden;
+    font-size: 100%;
+    -webkit-text-size-adjust: 100%;
     font-family:
         "JetBrains Mono",
         Inter,
@@ -48,6 +50,7 @@ input, textarea {
 }
 * {
     box-sizing: border-box;
+    overflow: visible;
     .code-output::-webkit-scrollbar-track {
         background: transparent;
     }
